--- a/resources/scss/vars.scss
+++ b/resources/scss/vars.scss
@@ -17,8 +17,8 @@
   --header-with-menu-height: 18rem; /* not truly dynamic bc of annoying sticky */
   --header-height-current:   var(--header-height); /* will then be changed by js dep on whether menu open... */
   --header-height-offset:    var(--header-height);
-  --footer-height:           3.25rem; // 3.00rem; // measured...
-  --footer-height-full:      25.0rem;
+  --footer-height:           4.5rem; // 3.00rem; // measured...
+  --footer-height-full:      35.0rem;
   --footer-height-current:   var(--footer-height);
   --footer-bottom:           0rem;
   --link-offset:         calc( var(--header-height-current));
